There's some kind of insane error with the tool tip occasionally not showing up, at all, under any circumstances, even if it's the only element on the page, so I'm going to go commit now to avoid the day's work in case i nuke everything in the process

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,15 +1,15 @@
 .current-time-marker {
-  transition: 1s height;
+  transition: 0.5s height;
 }
 .slide-left-1-add {
-  transition: 1s all;
+  transition: 0.5s all;
   transform: translateX(-120px);
 }
 .slide-left-1-add-active {
   transform: translateX(0px);
 }
 .slide-left-2-add {
-  transition: 1s all;
+  transition: 0.5s all;
   transform: translateX(-120px);
 }
 .slide-left-2-add-active {
@@ -17,7 +17,7 @@
 }
 .slide-left-1.ng-leave,
 .slide-left-2.ng-leave {
-  transition: 1s all;
+  transition: 0.5s all;
   transform: translateX(-120px);
 }
 .slide-left-1.ng-leave-active,
@@ -28,7 +28,7 @@
 .slide-left-2.ng-enter {
   position: relative;
   transform: translateX(-120px);
-  transition: 1s all;
+  transition: 0.5s all;
 }
 .slide-left-1.ng-enter-active,
 .slide-left-2.ng-enter-active {
@@ -36,7 +36,7 @@
 }
 .slide-right-1-add,
 .slide-right-2-add {
-  transition: 1s all;
+  transition: 0.5s all;
   transform: translateX(120px);
 }
 .slide-right-1-add-active,
@@ -45,7 +45,7 @@
 }
 .slide-right-1.ng-leave,
 .slide-right-2.ng-leave {
-  transition: 1s all;
+  transition: 0.5s all;
   transform: translateX(120px);
 }
 .slide-right-1.ng-leave-active,
@@ -54,7 +54,7 @@
 }
 .emission-row.ng-enter,
 .network-block.ng-enter {
-  transition: 1s all;
+  transition: 0.5s all;
   height: 0;
 }
 .emission-row.ng-enter-active,
@@ -63,7 +63,7 @@
 }
 .emission-row.ng-leave,
 .network-block.ng-leave {
-  transition: 1s all;
+  transition: 0.5s all;
   height: 64px;
 }
 .emission-row.ng-leave-active,
