--- a/styles/main.styl
+++ b/styles/main.styl
@@ -17,6 +17,17 @@ body
 		left 150px
 		top -30px
 
+.tv-guide-container
+	position relative
+
+.tooltip
+	width : 1000px
+	height : 1000px
+	background-color black
+	position : absolute
+	left : 0
+	top : 0px
+
 .viewport
 	padding 0
 	background-color #95a5a6
@@ -147,10 +158,7 @@ body
 	display inline-block
 	position absolute
 	z-index 10
-	
-// .tv-guide-container
-// 	position relative
-// 	left 60px
+
 
 .site-desc
 	margin-top 50px
